# plrs

./: .gitignore  CHANGELOG.md  DEMO_SCRIPT.md  LICENSE  README.md  SUBMISSION.md  docker-compose.yml  pom.xml
.github/workflows/: build.yml  perf.yml  release.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PROJECT_STATUS.md  README.md  iter3-remaining-steps.md
docs/runbooks/: RB-1-restore-from-backup.md  RB-2-pitr-walkthrough.md  RB-3-cycle-removal.md
plrs-application/: pom.xml
plrs-domain/: pom.xml
plrs-etl-worker/: Dockerfile  README.md  pyproject.toml
plrs-etl-worker/plrs_etl/: config.py  main.py
plrs-etl-worker/scripts/: build_docs.sh
plrs-etl-worker/tests/: test_idempotent.py  test_smoke.py
plrs-infrastructure/: pom.xml
plrs-infrastructure/src/main/resources/db/migration/: V10__quiz.sql  V11__quiz_attempts.sql  V12__user_skills.sql  V13__audit_log.sql  V14__recommendations.sql  V15__model_artifacts.sql  V16__warehouse_min.sql  V17__fact_eval_run.sql  V18__learner_paths.sql  V19__kpi_views.sql  V1__baseline.sql  V20__grant_app_dw_writes.sql  V21__user_lockout_columns.sql  V22__password_reset_columns.sql  V23__config_params.sql  (+10 more)
plrs-ml/: .gitignore  Dockerfile  README.md  pyproject.toml
plrs-ml/plrs_ml/: auth.py  cache.py  cf.py  config.py  db.py  eval.py  features.py  main.py
plrs-ml/scripts/: build_docs.sh
plrs-ml/tests/: test_auth.py  test_cache_smoke.py  test_cf.py  test_db_smoke.py  test_eval.py  test_features.py  test_health.py  test_similar.py  test_smoke.py
plrs-web/: pom.xml
plrs-web/src/main/resources/: application-prod.yml  application.yml  logback-spring.xml
plrs-web/src/main/resources/templates/: home.html  layout.html
scripts/: backup.sh  build_submission.sh  restore_verify.sh
test/chaos/: README.md  kafka_down.sh  ml_down.ps1  ml_down.sh  postgres_restart.ps1  postgres_restart.sh  redis_down.sh
test/jmeter/: README.md  recommendations-load.jmx  run.ps1  run.sh  seed-perf.sql
test/newman/: README.md  build-full-regression.sh  plrs-full-regression.postman_collection.json  plrs-full-regression.postman_environment.json  plrs-iter1.postman_collection.json  plrs-iter1.postman_environment.json  plrs-iter2.postman_collection.json  plrs-iter2.postman_environment.json  plrs-iter3.postman_collection.json  plrs-iter3.postman_environment.json  plrs-iter4.postman_collection.json  plrs-iter4.postman_environment.json  run-full.ps1  run-full.sh  run-iter2.ps1  run-iter2.sh  run-iter3.ps1  run-iter3.sh  run-iter4.ps1  run-iter4.sh  run.ps1  run.sh  seed-full.sql  seed-iter3.sql  seed-iter4.sql  seed.sql
(+490 files in other folders)
